problematica y necesidades de clases

--- a/01-Fundamentos/javascript-basics-0.0.2/index.html
+++ b/01-Fundamentos/javascript-basics-0.0.2/index.html
@@ -31,7 +31,10 @@
 
      <!-- Ciclos -->
      <!-- <script src="./assets/js/ciclos/while-do-while.js"></script> -->
-     <script src="./assets/js/ciclos/for.js"></script>
+     <!-- <script src="./assets/js/ciclos/for.js"></script> -->
+
+     <!-- Clases -->
+    <script src="assets/js/classes/problema.js"></script>
 
 </body>
 </html>
