--- a/01-Fundamentos/javascript-basics-0.0.2/index.html
+++ b/01-Fundamentos/javascript-basics-0.0.2/index.html
@@ -34,7 +34,8 @@
      <!-- <script src="./assets/js/ciclos/for.js"></script> -->
 
      <!-- Clases -->
-    <script src="assets/js/classes/problema.js"></script>
+    <!-- <script src="assets/js/classes/problema.js"></script> -->
+    <script src="assets/js/classes/class.js"></script>
 
 </body>
 </html>
