--- a/01-Fundamentos/javascript-basics-0.0.2/index.html
+++ b/01-Fundamentos/javascript-basics-0.0.2/index.html
@@ -36,7 +36,8 @@
      <!-- Clases -->
     <!-- <script src="assets/js/classes/problema.js"></script> -->
     <!-- <script src="assets/js/classes/class.js"></script> -->
-    <script src="assets/js/classes/sub-clases.js"></script>
+    <!-- <script src="assets/js/classes/sub-clases.js"></script> -->
+    <script src="assets/js/classes/esnext.js"></script>
 
 </body>
 </html>
